--- a/cmo_utilizar_el_robot_spiderbot.html
+++ b/cmo_utilizar_el_robot_spiderbot.html
@@ -27,22 +27,62 @@
    <li><a href="ttulo_del_proyecto.html" class="no-ch">Título del proyecto</a></li>
    <li><a href="descripcin_del_proyecto.html" class="daddy">Descripción del proyecto</a>
    <ul class="other-section">
-      <li><a href="contenidos.html" class="no-ch">Contenidos</a></li>
+      <li><a href="contenido.html" class="daddy">Contenido</a>
+      <ul class="other-section">
+         <li><a href="robtica_y_tinkercad.html" class="no-ch">Robótica y Tinkercad</a></li>
+         <li><a href="kit_de_robtica_impresin_3d_y_cdigo_c.html" class="no-ch">Kit de robótica, impresión 3D y código C++</a></li>
+      </ul>
+      </li>
+      <li><a href="actividades.html" class="daddy">Actividades</a>
+      <ul class="other-section">
+         <li><a href="actividad_1.html" class="no-ch">Actividad 1</a></li>
+         <li><a href="actividad_2.html" class="no-ch">Actividad 2</a></li>
+         <li><a href="actividad_3.html" class="no-ch">Actividad 3</a></li>
+         <li><a href="actividad_4.html" class="no-ch">Actividad 4</a></li>
+         <li><a href="actividad_5.html" class="no-ch">Actividad 5</a></li>
+      </ul>
+      </li>
    </ul>
    </li>
    <li id="active"><a href="cmo_utilizar_el_robot_spiderbot.html" class="active no-ch">Cómo utilizar el robot SpiderBot</a></li>
-   <li><a href="referencias.html" class="no-ch">Referencias</a></li>
+   <li><a href="referencias_bibliogrficas.html" class="no-ch">Referencias Bibliográficas</a></li>
    <li><a href="crditos.html" class="no-ch">Créditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="contenidos.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="referencias.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad_5.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="referencias_bibliogrficas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Cómo utilizar el robot SpiderBot</h1></header>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id15">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Video de como utilizar el robot SpiderBot</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta15_126_2" class="block iDevice_content">
+<div class="exe-text"><p>El SpiderBot contiene funciones específicas, por tal motivo se presenta un video sobre como controlar un robot bípedo equipado con servomotores, permitiéndole realizar movimientos complejos como caminar, girar, sentarse y levantarse, además de responder a comandos externos.</p>
+<p><iframe width="560" height="314" src="https://www.youtube.com/embed/ISW1Jtbx1K8"></iframe></p></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id21">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Manual de como utilizar el robot SpiderBot</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta21_137_2" class="block iDevice_content">
+<div class="exe-text"><p><video width="292" height="292" style="display: block; margin-left: auto; margin-right: auto;" controls="controls" class="mediaelement" autoplay="autoplay" muted="muted">
+<source src="Manual_de_Robotica_Educativa_para_los_estudiantes..docx.pdf" /></video></p></div>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
@@ -50,7 +90,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="contenidos.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="referencias.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad_5.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="referencias_bibliogrficas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
