--- a/index.html
+++ b/index.html
@@ -29,11 +29,25 @@
    <li><a href="ttulo_del_proyecto.html" class="no-ch">Título del proyecto</a></li>
    <li><a href="descripcin_del_proyecto.html" class="daddy">Descripción del proyecto</a>
    <ul class="other-section">
-      <li><a href="contenidos.html" class="no-ch">Contenidos</a></li>
+      <li><a href="contenido.html" class="daddy">Contenido</a>
+      <ul class="other-section">
+         <li><a href="robtica_y_tinkercad.html" class="no-ch">Robótica y Tinkercad</a></li>
+         <li><a href="kit_de_robtica_impresin_3d_y_cdigo_c.html" class="no-ch">Kit de robótica, impresión 3D y código C++</a></li>
+      </ul>
+      </li>
+      <li><a href="actividades.html" class="daddy">Actividades</a>
+      <ul class="other-section">
+         <li><a href="actividad_1.html" class="no-ch">Actividad 1</a></li>
+         <li><a href="actividad_2.html" class="no-ch">Actividad 2</a></li>
+         <li><a href="actividad_3.html" class="no-ch">Actividad 3</a></li>
+         <li><a href="actividad_4.html" class="no-ch">Actividad 4</a></li>
+         <li><a href="actividad_5.html" class="no-ch">Actividad 5</a></li>
+      </ul>
+      </li>
    </ul>
    </li>
    <li><a href="cmo_utilizar_el_robot_spiderbot.html" class="no-ch">Cómo utilizar el robot SpiderBot</a></li>
-   <li><a href="referencias.html" class="no-ch">Referencias</a></li>
+   <li><a href="referencias_bibliogrficas.html" class="no-ch">Referencias Bibliográficas</a></li>
    <li><a href="crditos.html" class="no-ch">Créditos</a></li>
 </ul>
 </nav>
